<resources>
    <string name="app_name">Pucesegram</string>
    <string name="hint_email">Correo Electronico</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No Tienes Cuenta?</string>
    <string name="create_here">Crea Una Aquí</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="toolbar_createaccount">Crear Cuenta</string>
    <string name="login_error">"Ocurrió este error: "</string>
    <string name="user_created">Usuario Creado</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Home</string>
    <string name="tab_profile">Yo</string>
    <string name="tab_camera">Camara</string>
    <string name="tab_favorite">Favorito</string>
    <string name="transitionname_picture">transitionnamepicture</string>
    <string name="username_card">Aaron Jaramillo</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">x días</string>
    <string name="likenumbercard_card">#</string>
    <string name="secondword_detail">Me Gusta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="titleimagedetail">Información</string>
    <string name="lorem">Descripción</string>
    <string name="Reset_Password">Restablecer contraseña</string>
    <string name="reset_finish">Se ha enviado el enlace a su correo</string>
    <string name="Forgot_Password">¿Has olvidado tu contraseña?</string>
    <string name="text_button_reset">Restablecer</string>
</resources>