<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardview="http://schemas.android.com/tools"
    android:id="@+id/pictureCards"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertival_margin"
    android:layout_marginTop="10dp"
    android:layout_margin="10dp"
    >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/pictureCard"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_cardview"
                android:background="@color/cardview_fondo"
                android:scaleType="centerCrop"
                android:transitionName="@string/transitionname_picture"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:padding="@dimen/activity_vertival_margin"
                android:paddingBottom="@dimen/activity_vertival_margin"
                android:background="@color/backgroundtext_card"
                >
                <TextView
                    android:id="@+id/userNameCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/textsize_username_card"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/firstword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstword_card"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/firstword_textsize_card"
                        />
                    <TextView
                        android:id="@+id/timeCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timecard_card"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/firstword_textsize_card"
                        android:layout_marginLeft="@dimen/timecard_marginleft_card"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/like_margintop_card"
                    >
                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/likeCheckCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_selector"
                        />
                    <TextView
                        android:id="@+id/likeNumberCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/likenumbercard_card"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/firstword_textsize_card"
                        android:layout_marginLeft="@dimen/timecard_marginleft_card"
                        />
                    <TextView
                        android:id="@+id/likeTextCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/secondword_detail"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/firstword_textsize_card"
                        android:layout_marginLeft="@dimen/timecard_marginleft_card"
                        />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>

    </androidx.cardview.widget.CardView>